# test-api

./: .env  Cargo.toml
migrations/: 0001_users_table.sql  0002_posts_table.sql
src/: main.rs  services.rs
